3-auth-policy/istio-setup/authpolicy-ns-default.yaml
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: wrapper-namespace-policy
spec:
  selector:
    matchLabels:
      app: istio-demo-wrapper
  action: DENY
  rules:
  - from:
    - source:
        notNamespaces: ["default"]
