3-auth-policy/istio-setup/authpolicy-sa-default.yaml
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: wrapper-sa-policy
spec:
  selector:
    matchLabels:
      app: istio-demo-wrapper
  action: DENY
  rules:
  - from:
    - source:
        notPrincipals: ["cluster.local/ns/default/sa/default"]
