3-auth-policy/istio-setup/authpolicy-sa-ingress.yaml
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: wrapper-sa-policy
spec:
  selector:
    matchLabels:
      app: istio-demo-wrapper
  action: DENY
  rules:
  - from:
    - source:
        notPrincipals: ["cluster.local/ns/istio-system/sa/istio-ingressgateway-service-account"]
